# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# The Cangjie API is in Beta. For details on its capabilities and limitations, please refer to the README file.

import("//build/ohos.gni")
import("//build/templates/cangjie/cjc.gni")

ohos_cangjie_shared_library("ohos.web.webview") {
  sources = [
    "back_forward_list.cj",
    "web_cookie_manager.cj",
    "webview_common.cj",
    "webview_controller.cj",
    "webview_ffi.cj",
    "webview_utils.cj",
  ]

  cj_external_deps = [
    "cangjie_ark_interop:ohos.business_exception",
    "cangjie_ark_interop:ohos.ffi",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
    "multimedia_cangjie_wrapper:ohos.multimedia.image",
    "cangjie_ark_interop:ohos.labels",
    "arkui_cangjie_wrapper:ohos.base",
    "arkui_cangjie_wrapper:ohos.arkui.component.util",
  ]

  external_deps = [ "webview:cj_webview_ffi" ]

  subsystem_name = "web"
  part_name = "arkweb_cangjie_wrapper"
}
